# M-Pi-Max

./: CLAUDE.md  README.md  launch.py  main.py  mpimax.service  pyproject.toml
static/: index.html
